--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -3,452 +3,17 @@
   @import 'reset_y_general';
   @import 'topbar';
   @import 'header';
-  @import 'description_service';
+  @import 'hero_section';
+  @import 'nosotros_section';
+  @import 'porfolio_servicios';
   @import 'porfolio_details';
+  @import 'porfolio_paquetes';
+  @import 'teams_section';
+  @import 'contacto';
+  @import 'descripcion';
   @import 'footer';
   @import 'back_top_up';
 
-  
-  
-  
-  /*--------------------------------------------------------------
-  # Hero Section
-  --------------------------------------------------------------*/
-  
-  #hero {
-  width: 100%;
-  background: #f9f9f9;
-  background-color: #f1f1f1;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='152' height='152' viewBox='0 0 152 152'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='temple' fill='%23ffffff' fill-opacity='0.4'%3E%3Cpath d='M152 150v2H0v-2h28v-8H8v-20H0v-2h8V80h42v20h20v42H30v8h90v-8H80v-42h20V80h42v40h8V30h-8v40h-42V50H80V8h40V0h2v8h20v20h8V0h2v150zm-2 0v-28h-8v20h-20v8h28zM82 30v18h18V30H82zm20 18h20v20h18V30h-20V10H82v18h20v20zm0 2v18h18V50h-18zm20-22h18V10h-18v18zm-54 92v-18H50v18h18zm-20-18H28V82H10v38h20v20h38v-18H48v-20zm0-2V82H30v18h18zm-20 22H10v18h18v-18zm54 0v18h38v-20h20V82h-18v20h-20v20H82zm18-20H82v18h18v-18zm2-2h18V82h-18v18zm20 40v-18h18v18h-18zM30 0h-2v8H8v20H0v2h8v40h42V50h20V8H30V0zm20 48h18V30H50v18zm18-20H48v20H28v20H10V30h20V10h38v18zM30 50h18v18H30V50zm-2-40H10v18h18V10z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
-  height: 82vh;
-  
-  }
-  #hero .container {
-  padding-top: 20px;
-  }
-  
-  #hero h2 {
-  font-size: 40px;
-  font-weight: 700;
-  line-height: 56px;
-  color: #0f394c;
-  text-transform: uppercase;
-  
-  text-align: center;
-  
-  }
-  
-  #hero h3 {
-  color: #1c698c;
-  margin: 10px 0 0 0;
-  font-size: 20px;
-  line-height: 1.5;
-  text-align: justify;
-  
-  }
-  
-  .row .hero-img img{
-  width: 100%;
-  }
-  
-  @media (max-width: 1200px) {
-    #hero {
-      height: 68vh;
-      text-align: center;
-    }
-   
-  }
-  
-  @media (max-width: 991px) {
-    #hero {
-      height: 100vh;
-      text-align: center;
-    }
-    #hero .hero-img img {
-      width: 55%;
-    }
-  }
-  @media (max-width: 768px) {
-    #hero{
-  
-      height: 95vh;
-    }
-    #hero h2 {
-      font-size: 26px;
-      line-height: 36px;
-    }
-    #hero h3 {
-      font-size: 18px;
-      line-height: 24px;
-    }
-    #hero .hero-img img {
-      width: 80%;
-    }
-  }
-  
-  
-  /*--------------------------------------------------------------
-  # Nosotros Section
-  --------------------------------------------------------------*/
-  
-  #nosotros{
-    background-color: #ffffff;
-    background-image: url("data:image/svg+xml,%3Csvg width='180' height='180' viewBox='0 0 180 180' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M81.28 88H68.413l19.298 19.298L81.28 88zm2.107 0h13.226L90 107.838 83.387 88zm15.334 0h12.866l-19.298 19.298L98.72 88zm-32.927-2.207L73.586 78h32.827l.5.5 7.294 7.293L115.414 87l-24.707 24.707-.707.707L64.586 87l1.207-1.207zm2.62.207L74 80.414 79.586 86H68.414zm16 0L90 80.414 95.586 86H84.414zm16 0L106 80.414 111.586 86h-11.172zm-8-6h11.173L98 85.586 92.414 80zM82 85.586L87.586 80H76.414L82 85.586zM17.414 0L.707 16.707 0 17.414V0h17.414zM4.28 0L0 12.838V0h4.28zm10.306 0L2.288 12.298 6.388 0h8.198zM180 17.414L162.586 0H180v17.414zM165.414 0l12.298 12.298L173.612 0h-8.198zM180 12.838L175.72 0H180v12.838zM0 163h16.413l.5.5 7.294 7.293L25.414 172l-8 8H0v-17zm0 10h6.613l-2.334 7H0v-7zm14.586 7l7-7H8.72l-2.333 7h8.2zM0 165.414L5.586 171H0v-5.586zM10.414 171L16 165.414 21.586 171H10.414zm-8-6h11.172L8 170.586 2.414 165zM180 163h-16.413l-7.794 7.793-1.207 1.207 8 8H180v-17zm-14.586 17l-7-7h12.865l2.333 7h-8.2zM180 173h-6.613l2.334 7H180v-7zm-21.586-2l5.586-5.586 5.586 5.586h-11.172zM180 165.414L174.414 171H180v-5.586zm-8 5.172l5.586-5.586h-11.172l5.586 5.586zM152.933 25.653l1.414 1.414-33.94 33.942-1.416-1.416 33.943-33.94zm1.414 127.28l-1.414 1.414-33.942-33.94 1.416-1.416 33.94 33.943zm-127.28 1.414l-1.414-1.414 33.94-33.942 1.416 1.416-33.943 33.94zm-1.414-127.28l1.414-1.414 33.942 33.94-1.416 1.416-33.94-33.943zM0 85c2.21 0 4 1.79 4 4s-1.79 4-4 4v-8zm180 0c-2.21 0-4 1.79-4 4s1.79 4 4 4v-8zM94 0c0 2.21-1.79 4-4 4s-4-1.79-4-4h8zm0 180c0-2.21-1.79-4-4-4s-4 1.79-4 4h8z' fill='%23dfdbe5' fill-opacity='0.4' fill-rule='evenodd'/%3E%3C/svg%3E");
-    }
-    
-    
-    #nosotros .nosotros-video video{
-    width: 100%;
-    height: 60vh;
-    margin: 20px;
-    }
-      
-    #nosostros .nosotros-icon {
-      margin-top: 40px;
-    }
-  
-  
-    #nosotros .nosotros-icon h3{
-      font-size: 28px;
-      font-weight: 700;
-      color: #0f394c;
-      margin-bottom: 15px;
-    }
-  
-    #nosotros .nosotros-icon p{
-      text-align: justify;
-    }
-  
-  
-    #nosotros .nosotros-icon .icon {
-      float: left;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      width: 64px;
-      height: 64px;
-      border: 2px solid #d0ecf9;
-      border-radius: 50px;
-      transition: 0.5s;
-  
-    }
-  
-    #nosotros .nosotros-icon .icon i{
-      color: #49b5e7;
-      font-size: 32px;
-    }
-  
-    #nosotros .nosotros-icon:hover .icon{
-      background: #49b5e7;
-      border-color: #49b5e7;
-    }
-  
-    #nosotros .nosotros-icon:hover .icon i{
-      color: #fff;
-    }
-  
-    #nosotros .nosotros-icon .title{
-      margin-left: 70px;
-      font-weight: 700;
-      margin-bottom: 10px;
-      font-size: 18px;
-  
-    }
-  
-    #nosotros .nosotros-icon .title a{
-      color: #343a40;
-      transform: 0.3s;
-  
-    }
-  
-    #nosotros .nosotros-icon .title a:hover{
-      color: #49b5e7;
-    }
-  
-    #nosotros .nosotros-icon .nosotros-descrip{
-      margin-left: 80px;
-      line-height: 24px;
-      font-size: 14px;
-    }
-  
-    #nosotros-video{
-      background-size: cover;
-    
-    }
-  
-  /*--------------------------------------------------------------
-  # Portfolio -Servicios
-  --------------------------------------------------------------*/
-  
-  
-  #portfolio{
-    background-color: #ffffff;
-    background-image: url("data:image/svg+xml,%3Csvg width='180' height='180' viewBox='0 0 180 180' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M81.28 88H68.413l19.298 19.298L81.28 88zm2.107 0h13.226L90 107.838 83.387 88zm15.334 0h12.866l-19.298 19.298L98.72 88zm-32.927-2.207L73.586 78h32.827l.5.5 7.294 7.293L115.414 87l-24.707 24.707-.707.707L64.586 87l1.207-1.207zm2.62.207L74 80.414 79.586 86H68.414zm16 0L90 80.414 95.586 86H84.414zm16 0L106 80.414 111.586 86h-11.172zm-8-6h11.173L98 85.586 92.414 80zM82 85.586L87.586 80H76.414L82 85.586zM17.414 0L.707 16.707 0 17.414V0h17.414zM4.28 0L0 12.838V0h4.28zm10.306 0L2.288 12.298 6.388 0h8.198zM180 17.414L162.586 0H180v17.414zM165.414 0l12.298 12.298L173.612 0h-8.198zM180 12.838L175.72 0H180v12.838zM0 163h16.413l.5.5 7.294 7.293L25.414 172l-8 8H0v-17zm0 10h6.613l-2.334 7H0v-7zm14.586 7l7-7H8.72l-2.333 7h8.2zM0 165.414L5.586 171H0v-5.586zM10.414 171L16 165.414 21.586 171H10.414zm-8-6h11.172L8 170.586 2.414 165zM180 163h-16.413l-7.794 7.793-1.207 1.207 8 8H180v-17zm-14.586 17l-7-7h12.865l2.333 7h-8.2zM180 173h-6.613l2.334 7H180v-7zm-21.586-2l5.586-5.586 5.586 5.586h-11.172zM180 165.414L174.414 171H180v-5.586zm-8 5.172l5.586-5.586h-11.172l5.586 5.586zM152.933 25.653l1.414 1.414-33.94 33.942-1.416-1.416 33.943-33.94zm1.414 127.28l-1.414 1.414-33.942-33.94 1.416-1.416 33.94 33.943zm-127.28 1.414l-1.414-1.414 33.94-33.942 1.416 1.416-33.943 33.94zm-1.414-127.28l1.414-1.414 33.942 33.94-1.416 1.416-33.94-33.943zM0 85c2.21 0 4 1.79 4 4s-1.79 4-4 4v-8zm180 0c-2.21 0-4 1.79-4 4s1.79 4 4 4v-8zM94 0c0 2.21-1.79 4-4 4s-4-1.79-4-4h8zm0 180c0-2.21-1.79-4-4-4s-4 1.79-4 4h8z' fill='%23bfdfed' fill-opacity='0.4' fill-rule='evenodd'/%3E%3C/svg%3E");
-  }
-  
-  .portfolio .portfolio-item {
-    margin-bottom: 30px;
-  }
-  
-  .portfolio .portfolio-wrap {
-    transition: 0.3s;
-    position: relative;
-    overflow: hidden;
-    z-index: 1;
-    border: solid 1px #f9f9f9;
-    background: rgba(255, 255, 255, 0.6);
-  }
-  .portfolio .portfolio-wrap::before {
-    content: "";
-    background: rgba(255, 255, 255, 0.6);
-    position: absolute;
-    left: 30px;
-    right: 30px;
-    top: 30px;
-    bottom: 30px;
-    transition: all ease-in-out 0.3s;
-    z-index: 2;
-    opacity: 0;
-  }
-  .portfolio .portfolio-wrap .portfolio-info {
-    opacity: 0;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    text-align: center;
-    z-index: 3;
-    transition: all ease-in-out 0.3s;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  .portfolio .portfolio-wrap .portfolio-info::before {
-    display: block;
-    content: "";
-    width: 48px;
-    height: 48px;
-    position: absolute;
-    top: 35px;
-    left: 35px;
-    border-top: 3px solid #bdc6ca;
-    border-left: 3px solid #bdc6ca;
-    transition: all 0.5s ease 0s;
-    z-index: 94; /*valor plano z*/
-  }
-  .portfolio .portfolio-wrap .portfolio-info::after {
-    display: block;
-    content: "";
-    width: 48px;
-    height: 48px;
-    position: absolute;
-    bottom: 35px;
-    right: 35px;
-    border-bottom: 3px solid #bdc6ca;
-    border-right: 3px solid #bdc6ca;
-    transition: all 0.5s ease 0s;
-    z-index: 94; /*valor plano z*/
-  }
-  .portfolio .portfolio-wrap .portfolio-info h4 {
-    font-size: 20px;
-    color: #0f394c;
-    font-weight: 600;
-    text-transform: uppercase;
-  }
-  .portfolio .portfolio-wrap .portfolio-info p {
-    color: #0f394c;
-    font-size: 14px;
-    padding: 0;
-    margin: 0;
-  }
-  .portfolio .portfolio-wrap .portfolio-links {
-    text-align: center;
-    z-index: 4;
-  }
-  .portfolio .portfolio-wrap .portfolio-links a {
-    color: #49b5e7;
-    margin: 0 2px;
-    font-size: 28px;
-    display: inline-block;
-    transition: 0.3s;
-  }
-  .portfolio .portfolio-wrap .portfolio-links a:hover {
-    color: #8dd0f0;
-  }
-  .portfolio .portfolio-wrap:hover::before {
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    opacity: 1;
-  }
-  .portfolio .portfolio-wrap:hover .portfolio-info {
-    opacity: 1;
-  }
-  .portfolio .portfolio-wrap:hover .portfolio-info::before {
-    top: 15px;
-    left: 15px;
-  }
-  .portfolio .portfolio-wrap:hover .portfolio-info::after {
-    bottom: 15px;
-    right: 15px;
-  }
-  
- 
-  /*--------------------------------------------------------------
-  # Portfolio -Paquetes
-  --------------------------------------------------------------*/
-  #paquetes{
-    width: 100%;
-    background-color: #ffffff;
-    background-image: url("data:image/svg+xml,%3Csvg width='64' height='64' viewBox='0 0 64 64' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M8 16c4.418 0 8-3.582 8-8s-3.582-8-8-8-8 3.582-8 8 3.582 8 8 8zm0-2c3.314 0 6-2.686 6-6s-2.686-6-6-6-6 2.686-6 6 2.686 6 6 6zm33.414-6l5.95-5.95L45.95.636 40 6.586 34.05.636 32.636 2.05 38.586 8l-5.95 5.95 1.414 1.414L40 9.414l5.95 5.95 1.414-1.414L41.414 8zM40 48c4.418 0 8-3.582 8-8s-3.582-8-8-8-8 3.582-8 8 3.582 8 8 8zm0-2c3.314 0 6-2.686 6-6s-2.686-6-6-6-6 2.686-6 6 2.686 6 6 6zM9.414 40l5.95-5.95-1.414-1.414L8 38.586l-5.95-5.95L.636 34.05 6.586 40l-5.95 5.95 1.414 1.414L8 41.414l5.95 5.95 1.414-1.414L9.414 40z' fill='%23c6dfea' fill-opacity='0.4' fill-rule='evenodd'/%3E%3C/svg%3E");
-  
-  }
-  
-  #paquetes .card-body a{
-    background-color: #49b5e7;
-    border-color: #49b5e7;
-  }
-  
-  #paquetes .card-body a:hover{
-    background-color: #1da2e0;
-    border-color: #1da2e0;
-  }
-  
-  
-  
-  /*--------------------------------------------------------------
-  # Section Teams
-  --------------------------------------------------------------*/
-  
-  .team .member {
-    text-align: center;
-    margin-bottom: 20px;
-    box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.1);
-    padding: 30px 20px;
-    background: #fff;
-  }
-  .team .member img {
-    max-width: 60%;
-    border-radius: 50%;
-    margin: 0 0 30px 0;
-  }
-  .team .member h4 {
-    font-weight: 700;
-    margin-bottom: 2px;
-    font-size: 18px;
-  }
-  .team .member span {
-    font-style: italic;
-    display: block;
-    font-size: 13px;
-  }
-  .team .member p {
-    padding-top: 10px;
-    font-size: 14px;
-    font-style: italic;
-    color: #aaaaaa;
-  }
-  .team .member .social {
-    margin-top: 15px;
-  }
-  .team .member .social a {
-    color: #919191;
-    transition: 0.3s;
-  }
-  .team .member .social a:hover {
-    color: #49b5e7;
-  }
-  .team .member .social i {
-    font-size: 18px;
-    margin: 0 2px;
-  }
-  
-  
-  /*--------------------------------------------------------------
-  # Contacto
-  --------------------------------------------------------------*/
-  
-  .contact .info {
-    width: 100%;
-    background: #fff;
-  }
-  .contact .info i {
-    font-size: 20px;
-    color: #49b5e7;
-    float: left;
-    width: 44px;
-    height: 44px;
-    background: #ebf7fc;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50px;
-    transition: all 0.3s ease-in-out;
-  }
-  .contact .info h4 {
-    padding: 0 0 0 60px;
-    font-size: 22px;
-    font-weight: 600;
-    margin-bottom: 5px;
-    color: #0f394c;
-  }
-  .contact .info p {
-    padding: 0 0 0 60px;
-    margin-bottom: 0;
-    font-size: 14px;
-    color: #2079a1;
-  }
-  .contact .info .email, .contact .info .phone {
-    margin-top: 40px;
-  }
-  .contact .info .email:hover i, .contact .info .address:hover i, .contact .info .phone:hover i {
-    background: #49b5e7;
-    color: #fff;
-  }
-  
-  .contact .php-email-form .form-group {
-    padding-bottom: 8px;
-  }
-  
-  
-  .contact .php-email-form .error-message br + br {
-    margin-top: 25px;
-  }
-  .contact .php-email-form .sent-message {
-    display: none;
-    color: #fff;
-    background: #18d26e;
-    text-align: center;
-    padding: 15px;
-    font-weight: 600;
-  }
-  
-  .contact .php-email-form input, .contact .php-email-form textarea {
-    border-radius: 0;
-    box-shadow: none;
-    font-size: 14px;
-    border-radius: 4px;
-  }
-  .contact .php-email-form input {
-    height: 44px;
-  }
-  .contact .php-email-form textarea {
-    padding: 10px 12px;
-  }
-  .contact .php-email-form button[type=submit] {
-    background: #49b5e7;
-    border: 0;
-    padding: 10px 24px;
-    color: #fff;
-    transition: 0.4s;
-    border-radius: 4px;
-  }
-  .contact .php-email-form button[type=submit]:hover {
-    background: #1da2e0;
-  }
   
   
   
