--- a/assets/scss/components/_porfolio_details.scss
+++ b/assets/scss/components/_porfolio_details.scss
@@ -6,23 +6,27 @@
   .portfolio-details {
     padding-top: 40px;
   }
-  .portfolio-details .portfolio-details-slider img {
-    width: 100%;
+
+  .portfolio-details .portfolio-details-slider{
+    box-shadow: 0px 0px 5px rgba(15, 57, 76, 0.08);
   }
-  .portfolio-details .portfolio-details-slider .swiper-pagination {
-    margin-top: 20px;
-    position: relative;
-  }
-  .portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet {
-    width: 12px;
-    height: 12px;
-    background-color: #fff;
-    opacity: 1;
-    border: 1px solid #49b5e7;
-  }
-  .portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet-active {
-    background-color: #49b5e7;
-  }
+  // .portfolio-details .portfolio-details-slider img {
+  //   width: 100%;
+  // }
+  // .portfolio-details .portfolio-details-slider .swiper-pagination {
+  //   margin-top: 20px;
+  //   position: relative;
+  // }
+  // .portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet {
+  //   width: 12px;
+  //   height: 12px;
+  //   background-color: #fff;
+  //   opacity: 1;
+  //   border: 1px solid #49b5e7;
+  // }
+  // .portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet-active {
+  //   background-color: #49b5e7;
+  // }
   .portfolio-details .portfolio-info {
     padding: 30px;
     box-shadow: 0px 0 30px rgba(15, 57, 76, 0.08);
