--- a/assets/scss/components/_nosotros_section.scss
+++ b/assets/scss/components/_nosotros_section.scss
@@ -11,8 +11,9 @@
     
     #nosotros .nosotros-video video{
     width: 100%;
-    height: 60vh;
+    height: 65vh;
     margin: 20px;
+    margin-top: 40px;
     }
       
     #nosostros .nosotros-icon {
