--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -520,6 +520,36 @@ section {
   margin-bottom: 30px;
 }
 
+.portfolio #portfolio-flters {
+  padding: 0;
+  margin: 0 auto 10px auto;
+  list-style: none;
+  text-align: center;
+  border-radius: 50px;
+  padding: 2px 15px;
+}
+
+.portfolio #portfolio-flters li {
+  cursor: pointer;
+  display: inline-block;
+  padding: 10px 15px;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 1;
+  text-transform: uppercase;
+  color: #444444;
+  margin-bottom: 10px;
+  transition: all 0.3s ease-in-out;
+}
+
+.portfolio #portfolio-flters li:hover, .portfolio #portfolio-flters li.filter-active {
+  color: #49b5e7;
+}
+
+.portfolio #portfolio-flters li:last-child {
+  margin-right: 0;
+}
+
 .portfolio .portfolio-wrap {
   transition: 0.3s;
   position: relative;
@@ -711,6 +741,7 @@ section {
   box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.1);
   padding: 30px 20px;
   background: #fff;
+  transition: all 0.3s ease-in-out;
 }
 
 .team .member img {
@@ -723,6 +754,10 @@ section {
   font-weight: 700;
   margin-bottom: 2px;
   font-size: 18px;
+}
+
+.team .member h4:hover {
+  color: #49b5e7;
 }
 
 .team .member span {
@@ -749,6 +784,10 @@ section {
 
 .team .member .social a:hover {
   color: #49b5e7;
+}
+
+.team .member:hover {
+  transform: translateY(-6px);
 }
 
 .team .member .social i {
