--- a/assets/scss/components/_porfolio_servicios.scss
+++ b/assets/scss/components/_porfolio_servicios.scss
@@ -13,6 +13,35 @@
     margin-bottom: 30px;
   }
   
+
+  .portfolio #portfolio-flters {
+    padding: 0;
+    margin: 0 auto 10px auto;
+    list-style: none;
+    text-align: center;
+    border-radius: 50px;
+    padding: 2px 15px;
+  }
+  .portfolio #portfolio-flters li {
+    cursor: pointer;
+    display: inline-block;
+    padding: 10px 15px;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 1;
+    text-transform: uppercase;
+    color: #444444;
+    margin-bottom: 10px;
+    transition: all 0.3s ease-in-out;
+  }
+  .portfolio #portfolio-flters li:hover, .portfolio #portfolio-flters li.filter-active {
+    color: #49b5e7;
+  }
+  .portfolio #portfolio-flters li:last-child {
+    margin-right: 0;
+  }
+
+
   .portfolio .portfolio-wrap {
     transition: 0.3s;
     position: relative;
