--- a/assets/scss/components/_teams_section.scss
+++ b/assets/scss/components/_teams_section.scss
@@ -9,6 +9,7 @@
     box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.1);
     padding: 30px 20px;
     background: #fff;
+    transition: all 0.3s ease-in-out;
   }
   .team .member img {
     max-width: 60%;
@@ -19,6 +20,9 @@
     font-weight: 700;
     margin-bottom: 2px;
     font-size: 18px;
+  }
+  .team .member h4:hover{
+    color: #49b5e7;
   }
   .team .member span {
     font-style: italic;
@@ -38,8 +42,11 @@
     color: #919191;
     transition: 0.3s;
   }
-  .team .member .social a:hover {
+  .team .member .social a:hover{
     color: #49b5e7;
+  }
+  .team .member:hover{
+    transform: translateY(-6px);
   }
   .team .member .social i {
     font-size: 18px;
