--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -713,6 +713,18 @@ section {
   padding: 0;
 }
 
+/*****************************************************************
+#Mensaje de envio de form
+*****************************************************************/
+.pagina-interna .mensaje p {
+  text-align: center;
+  font-size: 36px;
+  font-weight: 500;
+  font-family: "Lobster", cursive;
+  line-height: 4;
+  text-shadow: rgba(255, 255, 255, 0.6);
+}
+
 /*--------------------------------------------------------------
 # Portfolio -Paquetes
 --------------------------------------------------------------*/
