--- a/assets/scss/components/_porfolio_details.scss
+++ b/assets/scss/components/_porfolio_details.scss
@@ -42,3 +42,17 @@
     padding: 0;
   }
   
+
+  /*****************************************************************
+  #Mensaje de envio de form
+  *****************************************************************/@at-root
+  .pagina-interna  .mensaje p{
+    text-align: center;
+    font-size: 36px;
+    font-weight: 500;
+    font-family: $font-element-logo;
+    line-height: 4;
+    text-shadow: $color-rgb-topbar;
+
+
+  }
