--- a/assets/css/page_error404.css
+++ b/assets/css/page_error404.css
@@ -11,17 +11,13 @@
 }
 
 .no-found-centrado{
-    /* display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column; */
     height: 100vh;
 }
 
 .no-found{
     border: solid 1px brown;
     text-align: center;
-    width: 40%;
+    width: 45%;
 }
 
 .no-found img{
@@ -44,16 +40,46 @@
 }
 
 button {
-    padding: 15px 30px;
-    background-color: #ff0000a1;
-    font-family: Arial, Helvetica, sans-serif;
-    color: white;
+    padding: 10px 20px;
+    background-color: #49b5e7;
+    border-color: #49b5e7;
+    font-family: "Open Sans", sans-serif;
     font-size: 20px;
     border: 0;
-    border-radius: 25px;
+    border-radius: 20px;
     cursor: pointer;
 }
+
+button a{
+    color: #fff;
+    text-decoration: none;
+}
+
+button a:hover{
+    color: #fff;
+}
+
 button:hover{
-    color: #a49292;
+    background-color:#1da2e0;
+    border-color: #1da2e0;
 
 }
+
+
+
+@media (max-width: 991px){
+    .no-found {
+      width: 100%;
+    }
+    .no-found img {
+      width: 70%;
+    }
+  }
+
+  @media (max-width: 768px) {
+    .no-found img{
+        width: 85%;
+    }
+  }
+
+
